# Unhinged

./: .gitignore  Makefile  README.md  photo_dspy.py  pyproject.toml
.cursor/rules/: global_config.mdc  model.mdc  randomness.mdc  rye.mdc  typing.mdc
.github/workflows/: test_target_tests.yaml  vulture_dead_code.yaml
global_config/: global_config.py  global_config.yaml
src/agent/: dspy_langfuse.py  react_agent.py
src/algo/: feature_extract.py
src/demo/: demo.py
src/mobile_api/: api.py
src/models/: profile.py
src/mvp/: mvp.py
src/prompts/: feature_extractor.txt  my_data.md
src/utils/: adb_helpers.py  logging_config.py
